--- a/src/pages/EmployerDashboard.css
+++ b/src/pages/EmployerDashboard.css
@@ -135,7 +135,7 @@
   top: 0;
   height: calc(100vh - 70px);
   overflow-y: auto;
-  padding: 1rem;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
