--- a/src/pages/WorkerDashboard.css
+++ b/src/pages/WorkerDashboard.css
@@ -136,7 +136,7 @@
   top: 0;
   height: calc(100vh - 70px);
   overflow-y: auto;
-  padding: 1rem;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
